--- a/coolcafe/src/main/resources/templates/reset-password.html
+++ b/coolcafe/src/main/resources/templates/reset-password.html
@@ -34,7 +34,7 @@
                                 <input name="newPassword" required type="text" class="form-control" placeholder="Your new password" id="newPassword">
                             </div>
                             <input id="tokenInput" type="hidden" name="token" th:value="${token}" />
-                            <input type="submit" value="Send Email" class="btn btn-block btn-primary">
+                            <input type="submit" value="Reset Password" class="btn btn-block btn-primary">
                         </form>
                     </div>
                 </div>
