--- a/coolcafe/src/main/resources/templates/login.html
+++ b/coolcafe/src/main/resources/templates/login.html
@@ -52,6 +52,7 @@
                                     <div class="control__indicator"></div>
                                 </label>
                                 <span class="ml-auto"><a href="forget-password" class="forgot-pass">Forgot Password</a></span>
+                                <span class="ml-auto"><a href="register" class="forgot-pass">Register</a></span>
                             </div>
 
                             <input type="submit" value="Log In" class="btn btn-block btn-primary">
