--- a/coolcafe/src/main/resources/templates/menu.html
+++ b/coolcafe/src/main/resources/templates/menu.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
 	<title>CoolCafe`</title>
 	<meta charset="utf-8">
@@ -38,11 +39,13 @@
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active"><a href="" class="nav-link">Home</a></li>
+				<li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
 				<li class="nav-item"><a href="menu" class="nav-link">Menu</a></li>
 				<li class="nav-item"><a href="dashboard" class="nav-link">Dashboard</a></li>
-				<li class="nav-item"><a href="login" class="nav-link">Login</a></li>
-				<li class="nav-item"><a href="register" class="nav-link">Register</a></li>
+				<th:block sec:authorize="isAnonymous()">
+					<li class="nav-item"><a href="login" class="nav-link">Login</a></li>
+					<li class="nav-item"><a href="register" class="nav-link">Register</a></li>
+				</th:block>
 			</ul>
 		</div>
 	</div>
